# pidisplay

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: build-image.yml
ansible/: ansible.cfg  display.yml  inventory.sample.ini
ansible/roles/display/handlers/: main.yml
ansible/roles/display/tasks/: main.yml
ansible/roles/display/templates/: pidisplay.service.j2
controller/: .air.toml  .gitignore  Dockerfile  go.mod  go.sum  justfile  main  pidisplay.sample.yml
controller/cmd/: main.go
controller/frontend/: .oxfmtrc.json  astro.config.mjs  oxlint.config.json  package.json  pnpm-lock.yaml
controller/frontend/src/layouts/: Layout.astro
controller/frontend/src/pages/: index.astro
controller/frontend/src/styles/: global.css
controller/internal/server/: assets.go  chrome.go  config.go  server.go
controller/server/: chrome.go  main.go  server.go
display/: README.md  pyproject.toml
display/src/pidisplay/display/: app.py  display.py
src/inkyweb/controller/: app.py  chrome.py
src/inkyweb/display/: app.py  display.py
src/pidisplay/controller/: app.py
src/pidisplay/display/: app.py
